kubernetes.yml

apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-service
  labels:
    app: k8s-frontend-service
spec:
  selector:
    app: k8s-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-frontend-ingress
  labels:
    app: k8s-frontend-ingress
spec:
  rules:
    - host: k8s.frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-frontend-service
                port:
                  number: 80
